update missing middleware
